# fractol

./: CMakeLists.txt  Makefile  README.md  complex_number.c  draw_fractol.c  f_open_cl.c  formula.c  fractol.h  help_functions.c  keyboard_control.c  main.c  make_params.c  mandelbrot_julia.c  mouse_control.c  o_cl_new.cl  open_cl.cl  others_fractols.c  parce.c  t.txt
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lenint.c  ft_lstadd.c  ft_lstbackadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+27 more)
